js/src/jit-test/tests/binast/invalid/labelled-break-outside-while.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedBlockScope2AssertedScriptGlobalScope
Block
BreakStatement
"
LabelledStatement0LiteralBooleanExpression
Script
WhileStatement
[
STRINGS
]
identity
;
foo
[
TREE
]
identity
;
